# SEKSOV-

./: .env.example  .gitignore  README.md  README_WEB.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_web.py  start.bat  start.ps1  start_web.bat  start_web.ps1
backend/: .env.example  database.py  main.py  requirements.txt
backend/api/: auth.py  batches.py  injections.py  users.py
backend/models/: __init__.py  batch.py  injection.py  user.py
backend/schemas/: batch.py  injection.py  user.py
frontend/: .gitignore  index.html  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
frontend/src/styles/: App.css  Auth.css  Dashboard.css  global.css
src/seksov_bot/: __init__.py  bot.py  config.py  domain.py  keyboards.py  main.py  messages.py  storage.py  web.py  web_main.py
src/seksov_bot/web_static/: app.js  index.html  styles.css
tests/: test_config.py  test_domain.py  test_keyboards.py  test_messages.py  test_storage.py  test_web.py
