[project]
name = "seksov-bot"
version = "0.1.0"
description = "Telegram bot for tracking medication injections and current solution batch leftovers."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10,<4",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
seksov-bot = "seksov_bot.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
