[project]
name = "seksov-bot"
version = "0.1.0"
description = "Telegram bot for tracking medication injections and current solution batch leftovers."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.10,<4",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.28,<1",
    "httpx2>=2,<3",
]

[project.scripts]
seksov-bot = "seksov_bot.main:main"
seksov-web = "seksov_bot.web_main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.package-data]
seksov_bot = ["web_static/*"]
